--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: Leitura Display Swashes;
-	src: url(leitura.otf);
+	src: url(../img/leitura.otf);
 }
 
 html, body {
@@ -17,7 +17,7 @@ html, body {
 	width:inherit;
 	height:inherit;
 	position: fixed;
-	background-image:url(background.jpg);
+	background-image:url(../img/background.jpg);
 	opacity: 0.6;
 }
 
@@ -75,7 +75,7 @@ th {
 	float: right;
 	margin-right: 5px;
 
-	background-image:url(old-paper.jpg);
+	background-image:url(../img/old-paper.jpg);
 	background-repeat: repeat-x;
 
 	font-family: Leitura Display Swashes;
@@ -85,6 +85,10 @@ th {
 /*	border-collapse: separate; */
 	border-spacing: 10px 0;
 	margin: 10px;
+}
+
+#physical, #personality {
+	display: none;
 }
 
 .rainbow {
