--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,8 @@ html, body {
 .header {
 /*	border: 1px solid black;
 	border-collapse: collapse; */
-	margin: 10px 5px 10px 10px;
+	margin: 0px 5px 10px 10px;
+	padding-top: 10px;
 }
 
 #title {
